@@ -298,4 +298,5 @@ files[] = tests/views_pager.test
 files[] = tests/views_query.test
 files[] = tests/views_test.views_default.inc
 files[] = tests/user/views_user_argument_default.test
+files[] = tests/user/views_user_argument_validate.test
 files[] = tests/views_cache.test
